examples/datalog/32_math/16_sign_function.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_sign
Knowledge graph 'test_sign' created.
Switched to knowledge graph: test_sign
> .kg use test_sign
Switched to knowledge graph: test_sign
> +nums[(-10,), (-1,), (0,), (1,), (10,)].
Inserted 5 fact(s) into 'nums'.
> sign_result(X, S) :- nums(X), S = SIGN(X).
Script error: Parse error: Invalid term: 'SIGN(X)'
